<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright © 2022 92AK
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>pearl-zip</artifactId>
        <groupId>com.ntak</groupId>
        <version>0.0.5.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>pearl-zip-ui</artifactId>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <pearl-zip.version>${project.parent.version}</pearl-zip.version>
        <pearlzip.sign.store.password>SET STORE PASSWORD</pearlzip.sign.store.password>
        <pearlzip.sign.key.password>SET KEY PASSWORD</pearlzip.sign.key.password>
        <deploy.settings.loc>${project.basedir}/scripts/settings.properties</deploy.settings.loc>
        <git.commit.id>HASH-GEN</git.commit.id>
    </properties>

    <licenses>
        <license>
            <name>BSD 3-Clause</name>
            <url>http://opensource.org/licenses/BSD-3-Clause</url>
        </license>
    </licenses>

    <repositories>
        <repository>
            <id>mvn-repo-1</id>
            <name>Maven Repository 1</name>
            <url>https://repo1.maven.org/maven2</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Pearl Zip Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/aashutos/pearl-zip</url>
        </repository>
    </distributionManagement>

    <dependencies>
        <dependency>
            <groupId>com.ntak</groupId>
            <artifactId>pearl-zip-archive-acc</artifactId>
            <version>${project.parent.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.ntak</groupId>
            <artifactId>pearl-zip-archive-szjb</artifactId>
            <version>${project.parent.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.ntak</groupId>
            <artifactId>pearl-zip-license</artifactId>
            <version>${project.parent.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.ntak</groupId>
            <artifactId>ntak-testfx-util</artifactId>
            <version>${parent.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>de.jangassen</groupId>
            <artifactId>nsmenufx</artifactId>
            <version>3.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.greenrobot</groupId>
            <artifactId>eventbus</artifactId>
            <version>3.2.0</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-xml</artifactId>
            <version>2.13.3</version>
        </dependency>
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
            <version>4.0.0</version>
        </dependency>
        <dependency>
            <groupId>com.ntak</groupId>
            <artifactId>pearl-zip-archive</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.ntak</groupId>
            <artifactId>pearl-zip-lang-pack-${lang}-${country}</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
        <dependency>
            <groupId>com.ntak</groupId>
            <artifactId>sevenzipjbinding</artifactId>
            <version>16.02-2.01</version>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.4.1</version>
        </dependency>
        <!--<dependency>
            <groupId>com.oracle.database.jdbc</groupId>
            <artifactId>ojdbc11</artifactId>
            <version>21.4.0.0.1</version>
        </dependency>-->
        <dependency>
            <groupId>com.jfoenix</groupId>
            <artifactId>jfoenix</artifactId>
            <version>9.0.10</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <excludes>
                    <exclude>*.jks</exclude>
                </excludes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <includes>
                        <include>**/*TestSuite.class</include>
                    </includes>
                    <argLine>
                        --add-exports com.ntak.pearlzip.archive.acc/com.ntak.pearlzip.archive.acc.pub=com.ntak.pearlzip.ui
                        --add-exports com.ntak.pearlzip.archive.szjb/com.ntak.pearlzip.archive.szjb.pub=com.ntak.pearlzip.ui
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.5</version>
                <configuration>
                    <mainClass>Application</mainClass>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.google.code.maven-replacer-plugin</groupId>
                <artifactId>replacer</artifactId>
                <version>1.5.3</version>
                <executions>
                    <execution>
                        <id>hash-set</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>replace</goal>
                        </goals>
                        <configuration>
                            <includes>
                                <include>${project.basedir}/target/classes/application.properties</include>
                            </includes>
                            <replacements>
                                <replacement>
                                    <token>:: HASH ::</token>
                                    <value>${git.commit.id}</value>
                                </replacement>
                            </replacements>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>pl.project13.maven</groupId>
                <artifactId>git-commit-id-plugin</artifactId>
                <version>4.0.0</version>
                <executions>
                    <execution>
                        <id>get-the-git-infos</id>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                        <phase>validate</phase>
                    </execution>
                </executions>
                <configuration>
                    <dotGitDirectory>${project.parent.basedir}/.git</dotGitDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>
                        <compilerArg>--add-opens</compilerArg>
                        <compilerArg>com.ntak.pearlzip.license/com.ntak.pearlzip.license.pub.PearlZipLicenseService=com.ntak.pearlzip.ui</compilerArg>
                        <compilerArg>--add-exports</compilerArg>
                        <compilerArg>nsmenufx/de.jangassen.platform.mac=com.ntak.pearlzip.ui</compilerArg>
                        <compilerArg>--add-exports</compilerArg>
                        <compilerArg>nsmenufx/de.jangassen.platform=com.ntak.pearlzip.ui</compilerArg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <id>copy-keystores</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <executable>rsync</executable>
                    <arguments>
                        <argument>-a</argument>
                        <argument>${project.basedir}/src/main/resources/keystore</argument>
                        <argument>${project.basedir}/src/main/resources/truststore</argument>
                        <argument>${project.build.directory}/classes</argument>
                    </arguments>
                    <async>false</async>
                </configuration>
                <goals>
                    <goal>exec</goal>
                </goals>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <id>test-code</id>
                        <phase>package</phase>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                        <configuration>
                            <forceCreation>true</forceCreation>
                            <classifier>tests</classifier>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>increment-version</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.google.code.maven-replacer-plugin</groupId>
                        <artifactId>replacer</artifactId>
                        <version>1.5.3</version>
                        <executions>
                            <execution>
                                <id>version-set</id>
                                <phase>validate</phase>
                                <goals>
                                    <goal>replace</goal>
                                </goals>
                                <configuration>
                                    <includes>
                                        <include>${project.basedir}/pom.xml</include>
                                    </includes>
                                    <replacements>
                                        <replacement>
                                            <token>${project.version}</token>
                                            <value>${pearlzip.next.version}</value>
                                        </replacement>
                                    </replacements>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>sign-pz-lib</id>
            <properties>
                <maven.deploy.skip>false</maven.deploy.skip>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.6.0</version>
                        <executions>
                            <execution>
                                <id>sign-lib</id>
                                <phase>pre-integration-test</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>sh</executable>
                                    <arguments>
                                        <argument>${project.basedir}/../scripts/sign-lib.sh</argument>
                                        <argument>${project.version}</argument>
                                    </arguments>
                                    <environmentVariables>
                                        <JAVA_HOME>${jdk.location}</JAVA_HOME>
                                    </environmentVariables>
                                    <async>false</async>
                                </configuration>
                            </execution>
                            <execution>
                                <id>clean-mvn-package</id>
                                <phase>clean</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>sh</executable>
                                    <arguments>
                                        <argument>${project.basedir}/../scripts/clear-mvn-package.sh</argument>
                                        <argument>${project.version}</argument>
                                        <argument>${deploy.settings.loc}</argument>
                                    </arguments>
                                    <environmentVariables>
                                        <JAVA_HOME>${jdk.location}</JAVA_HOME>
                                    </environmentVariables>
                                    <async>false</async>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>